syntax = "proto3";
package temporal.yieldmos;

option go_package = "temporal/x/yieldmos/types";
import "temporal/yieldmos/delegation_timestamp.proto"; 

message DelegationHistory {
  string address = 1; 
  repeated DelegationTimestamp history = 2;
  
}

