syntax = "proto3";

package temporal.yieldmos;

import "gogoproto/gogo.proto";
import "temporal/yieldmos/params.proto";
import "temporal/yieldmos/delegation_history.proto";

option go_package = "github.com/temporal-zone/temporal/x/yieldmos/types";

// GenesisState defines the yieldmos module's genesis state.
message GenesisState {
           Params            params                = 1 [(gogoproto.nullable) = false];
  repeated DelegationHistory delegationHistoryList = 2 [(gogoproto.nullable) = false];
}

